--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest",
-    "build": "tsc"
+    "build": "tsc",
+    "prettier": "prettier --write --cache .",
+    "coverage": "vitest --coverage"
   },
   "author": "cybersorcerers <cybersorcerers23@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^5.3.2"
+    "@vitest/coverage-istanbul": "^0.34.6",
+    "prettier": "^3.1.0",
+    "typescript": "^5.3.2",
+    "vitest": "^0.34.6"
   }
 }
