--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   "author": "cybersorcerers <cybersorcerers23@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@vitest/coverage-istanbul": "^0.34.6",
     "prettier": "^3.1.0",
     "typescript": "^5.3.2",
     "vitest": "^0.34.6"
+  },
+  "dependencies": {
+    "@aws-sdk/client-cognito-identity": "^3.462.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.462.0",
+    "express": "^4.18.2"
   }
 }
