--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prettier": "^3.2.4",
     "serverless-offline": "^13.3.3",
     "serverless-plugin-typescript": "^2.1.5",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.3.1"
   }
 }
