--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "<!-- title: 'AWS Simple HTTP Endpoint example in NodeJS' description: 'This template demonstrates how to make a simple HTTP API with Node.js running on AWS Lambda and API Gateway using the Serverless Framework.' layout: Doc framework: v3 platform: AWS language: nodeJS authorLink: 'https://github.com/serverless' authorName: 'Serverless, inc.' authorAvatar: 'https://avatars1.githubusercontent.com/u/13742415?s=200&v=4' -->",
   "main": ".#index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "mongoose": "^8.2.0"
   },
   "devDependencies": {
+    "@jazim/mock-mongoose": "^1.0.1",
     "prettier": "^3.2.4",
     "serverless-offline": "^13.3.3",
     "serverless-plugin-typescript": "^2.1.5",
